Modificacion de app autenticacion

--- a/templates/autenticacion/acceder.html
+++ b/templates/autenticacion/acceder.html
@@ -9,7 +9,7 @@
     <div>
         <form class="form" action="" method="post">{% csrf_token %}
             <div class="cab">
-                <p class="tit" style="font-style: italic;">Sistemas-AlBor</p>
+                <p class="tit" style="font-style: italic;">Sistemas-PatacaSis</p>
             </div>
             <div class="formulario">
                 {{form|crispy}}
