--- a/templates/empresas/empresas.html
+++ b/templates/empresas/empresas.html
@@ -1,18 +1,18 @@
 {% extends 'base.html' %}
 
-{% block navbar %}
+<!-- {% block navbar %}
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <a class="navbar-brand" href="#">Empresas Registradas</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
 </nav>
-{% endblock %}
+{% endblock %} -->
   {% block content %}
   <div class="container">
     <div class="card" style="margin-top: 10px; width: 100%;">
         <div class="card-header" style="background-color: rgb(6, 232, 248); color:rgb(37, 37, 37); font-size: 18px;">
-            Empresas registradas
+            Empresas registradas <a href="#" style="margin-right:auto;">Volver al Inicio</a>
             <!-- {% block boton-crear %}<a href="#" class="btn btn-outline-warning btn-sm boton-crear">Nuevo registro</a>{% endblock %} -->
         </div>
         <div class="card-body">
@@ -22,7 +22,6 @@
                   <tr>
                       <th>Razon Social</th>
                       <th>Numero</th>
-                      <th>Localidad</th>
                       <th>Productos</th>
                       <th>Acciones</th>
                   </tr>
@@ -30,16 +29,17 @@
               <tbody>
                 {% for empresa in empresas %}
                   <tr>
-                      <td>{{empresa.nombre}}</td>
-                      <td>{{empresa.numero}}</td>
-                      <td>{{empresa.localidad}}</td>
+                      <td>{{empresa.nombre|upper}}</td>
+                      <td>{{empresa.numero|upper}}</td>
                       <td>
                         {% for producto in empresa.productos_id.all %}
                         <li>{{producto.tipo}}</li>
                         {% endfor %}
                       </td>
                       <td>
-                        <a href="#" class="btn btn-warning btn-sm">Editar</a>
+                        <a href="#" class="btn btn-warning btn-sm">Auditorias</a>
+                        <a href="#" class="btn btn-warning btn-sm">Controles</a>
+                        <a href="{% url 'datos' empresa.id %}" class="btn btn-warning btn-sm">Editar Datos</a>
                         <a href="#" class="btn btn-danger btn-sm">Borrar</a>
                       </td>
                     </tr>      
