--- a/templates/empresas/empresas.html
+++ b/templates/empresas/empresas.html
@@ -1,20 +1,12 @@
 {% extends 'base.html' %}
-
-<!-- {% block navbar %}
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <a class="navbar-brand" href="#">Empresas Registradas</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-</nav>
-{% endblock %} -->
+{% block title %}|Empresas{% endblock %}
   {% block content %}
   <div class="container">
     <div class="card" style="margin-top: 10px; width: 100%;">
         <div class="card-header" style="background-color: rgb(6, 232, 248); color:rgb(37, 37, 37); font-size: 18px;">
-            Empresas registradas <a href="#" style="margin-right:auto;">Volver al Inicio</a>
-            <!-- {% block boton-crear %}<a href="#" class="btn btn-outline-warning btn-sm boton-crear">Nuevo registro</a>{% endblock %} -->
+            Empresas Lacteas registradas
         </div>
+        
         <div class="card-body">
             <table id="miTabla" class="display compact" style="font-size: 13px;">
                 {% if empresas %}
@@ -22,25 +14,22 @@
                   <tr>
                       <th>Razon Social</th>
                       <th>Numero</th>
-                      <th>Productos</th>
                       <th>Acciones</th>
                   </tr>
               </thead>
               <tbody>
                 {% for empresa in empresas %}
                   <tr>
-                      <td>{{empresa.nombre|upper}}</td>
-                      <td>{{empresa.numero|upper}}</td>
+                      <td><a href="{% url 'menu' empresa.id %}">{{empresa.nombre|upper}}</a></td>
+                      <td>S-I-{{empresa.numero|upper}}</td>
                       <td>
-                        {% for producto in empresa.productos_id.all %}
-                        <li>{{producto.tipo}}</li>
-                        {% endfor %}
-                      </td>
-                      <td>
-                        <a href="#" class="btn btn-warning btn-sm">Auditorias</a>
-                        <a href="#" class="btn btn-warning btn-sm">Controles</a>
                         <a href="{% url 'datos' empresa.id %}" class="btn btn-warning btn-sm">Editar Datos</a>
-                        <a href="#" class="btn btn-danger btn-sm">Borrar</a>
+                        <a href="#" class="btn btn-warning btn-sm">Auditorias</a>
+                        <a href="#" class="btn btn-warning btn-sm">Agua</a>
+                        <a href="#" class="btn btn-warning btn-sm">Plagas</a>
+                        <a href="#" class="btn btn-warning btn-sm">Plan CREHA</a>
+                        <a href="#" class="btn btn-warning btn-sm">Certificados Inocuidad</a>
+                        <a href="#" class="btn btn-danger btn-sm">Desactivar</a>
                       </td>
                     </tr>      
               </tbody>
@@ -48,8 +37,8 @@
               {% else %}
               <h3>No hay empresas registradas en el sistema</h3>
               {% endif %}
+            </table>
         </div>
-          </table>
     </div>
 </div>
   {% endblock %}
