--- a/templates/base.html
+++ b/templates/base.html
@@ -37,12 +37,21 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
-                <li class="nav-item">
-                    <a class="nav-link ml-lg-3" href="{% url 'empresas' %}">Empresas<span class="sr-only">(current)</span></a>
+                <li class="nav-item dropdown">
+                    <a class="nav-link ml-lg-3 dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    Controles
+                    </a>
+                    <div class="dropdown-menu sub-menu" aria-labelledby="navbarDropdown">
+                        <a class="dropdown-item" href="{% url 'auditorias' %}">Auditorias</a>
+                        <a class="dropdown-item" href="#">Control de Agua</a>
+                        <a class="dropdown-item" href="#">Control de Plagas</a>
+                        <a class="dropdown-item" href="#">Realizar Muestreos</a>
+                        <a class="dropdown-item" href="{% url 'empresas' %}">Registros de Empresas</a>
+                    </div>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link ml-lg-3" href="#">Muestreos</a>
-                </li>
+                    <a class="nav-link ml-lg-3" href="#">Productos</a>
+                  </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link ml-lg-3 dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     Bases normativas
@@ -62,7 +71,7 @@
             </ul>
                 {% if user.is_authenticated %}
                 <ul class="navbar-nav ml-auto">
-                 <li class="nav-link ml-lg-3 saludo">Bienvenido {{user.username}}</li>
+                 <li class="nav-link ml-lg-3 saludo">Bienvenido {{user.username|capfirst}}</li>
                  <li class="nav-item">
                     <a class="nav-link ml-lg-4 saludo" href="{% url 'salir' %}">Salir</a>
                 </li>
