Funcionalidad a app Auditoria y Agua

--- a/templates/base.html
+++ b/templates/base.html
@@ -43,7 +43,7 @@
                     </a>
                     <div class="dropdown-menu sub-menu" aria-labelledby="navbarDropdown">
                         <a class="dropdown-item" href="{% url 'auditorias' %}">Auditorias</a>
-                        <a class="dropdown-item" href="#">Control de Agua</a>
+                        <a class="dropdown-item" href="{% url 'agua' %}">Control de Agua</a>
                         <a class="dropdown-item" href="#">Control de Plagas</a>
                         <a class="dropdown-item" href="#">Realizar Muestreos</a>
                         <a class="dropdown-item" href="{% url 'empresas' %}">Registros de Empresas</a>
