--- a/templates/empresas/agua_nuevo_control.html
+++ b/templates/empresas/agua_nuevo_control.html
@@ -6,7 +6,7 @@
 <div class="container">
     <div class="card" style="margin-top: 10px; width: 100%;">
         <div class="card-header" style="background-color: rgb(6, 232, 248); color:rgb(37, 37, 37); font-size: 18px;">
-            Realizar nueva auditoria
+            Realizar nuevo control de agua
         </div>
         <div class="card-body">
             <form action="" method="POST">
