--- a/templates/empresas/auditoriaDetalle.html
+++ b/templates/empresas/auditoriaDetalle.html
@@ -3,7 +3,7 @@
 {% block title %}|Auditoria{% endblock %}
 
 {% block content %}
-<a style="color:black; font-size: 13px; margin-left: 10px;" href="{% url 'index' %}">Volver a inicio</a>
+<a style="color:black; font-size: 13px; margin-left: 10px;" href="{% url 'auditorias' %}">Volver al listado de auditorias</a>
 <div class="container">
   <div class="card">
     <h2 class="card-header" style="background-color: rgb(6, 232, 248); color:rgb(37, 37, 37); font-size: 18px;">{{object.empresa|upper}}</h2>
@@ -17,15 +17,15 @@
         <br>
         <h3 class="sub-titulo-card" style="display: inline;">Alcance de auditoria:</h3>&nbsp;<span class="dato-empresa">{{object.alcance|upper}}</span>
         <br>
-        <h3 class="sub-titulo-card" style="display: inline;">Auditor o Equipo auditor:</h3>&nbsp;<span class="dato-empresa">{{object.auditor|upper}}</span>
+        <h3 class="sub-titulo-card" style="display: inline;">Auditor o Equipo auditor:</h3>&nbsp;<span class="dato-empresa">{{object.auditores|upper}}</span>
         <br>
-        <h3 class="sub-titulo-card" style="display: inline;">Presentes por la empresa auditada:</h3>&nbsp;<span class="dato-empresa">{{object.auditado|upper}}</span>
+        <h3 class="sub-titulo-card" style="display: inline;">Presentes por la empresa auditada:</h3>&nbsp;<span class="dato-empresa">{{object.auditados|upper}}</span>
         <hr>
         <!-- <h3 class="sub-titulo-card">Grupos Tecnologicos</h3>
         {% for grupo in empresa.grupos_id.all%}
         <span class="dato-empresa">{{grupo}}</span>
         {% endfor %} -->
-        <h3 class="sub-titulo-card" style="display: inline;">Grupos Tecnologicos habilitados:</h3>&nbsp;<span class="dato-empresa">{{object.empresa.grupos_id.all|join:" - "|upper}}</span>
+        <h3 class="sub-titulo-card" style="display: inline;">Grupos Tecnologicos habilitados:</h3>&nbsp;<span class="dato-empresa">{{object.grupos_id.all|join:" - "|upper}}</span>
         <br>
         <h3 class="sub-titulo-card" style="display: inline;">No conformidades:</h3>&nbsp;<span class="dato-empresa">{{object.nc|capfirst}}</span>
         <br>
